Commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prueba de git</h1>
-    <p>Párrafo de inicio</p>
+    <div id="container">
+        <div id="container__post">
+            <h1>Prueba de git</h1>
+            <p>Párrafo de inicio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ea eligendi, cum eius quia quasi facere quae nesciunt dolor in nobis id recusandae soluta. Quasi tenetur est rerum numquam maiores.</p>
+        </div>
+    </div>
 </body>
 </html>
