--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="container__post">
             <h1>Prueba de git</h1>
             <p>Párrafo de inicio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ea eligendi, cum eius quia quasi facere quae nesciunt dolor in nobis id recusandae soluta. Quasi tenetur est rerum numquam maiores.</p>
