Escribiendo segundo parrafo y cambio de tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="container__post">
             <h1>Prueba de git</h1>
             <p>Párrafo de inicio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ea eligendi, cum eius quia quasi facere quae nesciunt dolor in nobis id recusandae soluta. Quasi tenetur est rerum numquam maiores.</p>
+            <p>Segundo párrafo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut quaerat dolore, autem quisquam beatae ipsam tempora sunt? Cupiditate veritatis sunt, magnam inventore voluptatum ratione dignissimos incidunt atque suscipit reprehenderit quisquam.</p>
         </div>
     </div>
 </body>
